@@ -1,3 +1,3 @@
-EBUILD kde-env-4.2.3.ebuild 3143 RMD160 1dd2a9d8e789dc3010fd819896506f7f5c0849cb SHA1 e3a097f98f076600be95ff6c9991aa3953903e62 SHA256 1f1c988970d91e59fbd3a79b6a39efa776fc3ab31cc988b83878eef823e86ee3
-MISC ChangeLog 570 RMD160 dc706281642dfbfbd3d47b50efd3f4a839353784 SHA1 17d4da5b859e3a550e63041a560e27c8062ac197 SHA256 27f6f7ad55449cef7b254f70cae3575f5fc886059ed6e7ca0624c8064c2aa20a
+EBUILD kde-env-4.2.3.ebuild 3162 RMD160 fe4dd432e45324cc282ea3b35f5610a4ac4ebe17 SHA1 7ae219508083cdc4981c10f3ac5c5cdff3de1756 SHA256 d8236fb4a4c374f411fe9abbc16a95e5d1e86125df4762847046b9b4e46c3fe2
+MISC ChangeLog 698 RMD160 f584d6da8ce4b3ed797794adf09dcd31a9d7ce9f SHA1 667ec3cd7f6ba6a766199905bc6c7e10dd40d171 SHA256 8dd37b855dddda307b5d1d49baa3a95e077ceb6069ef85e6d8ba500ef588d573
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
