@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kde-env
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-env/ChangeLog,v 1.36 2009/05/08 10:34:45 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-env/ChangeLog,v 1.37 2009/05/09 13:41:20 scarabeus Exp $
+
+  09 May 2009; Tomas Chvatal <scarabeus@gentoo.org> kde-env-4.2.3.ebuild:
+  Fix failiture with FEATURES=test. Per bug #269011.
 
   08 May 2009; Tomas Chvatal <scarabeus@gentoo.org> kde-env-4.2.3:
   Add kdelibs:3.5 blocker to avoid hard blocks.
